Bug 360860 - Filter text dialog max width problem
Summary: Filter text dialog max width problem
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-22 17:20 UTC by svakak
Modified: 2016-09-07 19:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description svakak 2016-03-22 17:20:02 UTC
Filter text dialog (Tools>Filter Text) is scaled to largest entered command in command history dropdown widget. If user enters really long command next time dialog is opened it will be as wide as widest command in history. In my case that is 500+ characters and now Filter text dialog is wider than my screen and unusable.

Reproducible: Always

Steps to Reproduce:
1. Open filter text dialog Tools > Filter text
2. Enter 500+ characters long command and execute it
3. Open filter text dialog Tools > Filter text

Actual Results:  
Filter text dialog is wider than my screens and cannot be drag-resized.

Expected Results:  
Filter text dialog should have max width set, either absolute value, or relative to the screen resolution.

Version 15.12.2
KDE Frameworks 5.19.0
Qt 5.5.1 (built against 5.5.1)
The xcb windowing system
Comment 1 Christoph Cullmann 2016-09-07 19:16:16 UTC
Git commit f0b747a14be6edd90578dfed6e05e13154d26448 by Christoph Cullmann.
Committed on 07/09/2016 at 19:15.
Pushed by cullmann into branch 'master'.

Bug 360860 - Filter text dialog max width problem

=> 80 columns

M  +1    -0    addons/textfilter/plugin_katetextfilter.cpp
M  +0    -6    addons/textfilter/textfilterwidget.ui

http://commits.kde.org/kate/f0b747a14be6edd90578dfed6e05e13154d26448