Bug 360860 - Filter text dialog max width problem

=> 80 columns

BUG: 360860